--- a/src/scss/project/blocks/week-calendar.scss
+++ b/src/scss/project/blocks/week-calendar.scss
@@ -2,13 +2,8 @@
     height: $header-size;
     width: 100%;
     @include colorize-normal($gray-scale-5, $gray-scale-0);
-    &-radioform {
-        display: table;
-        height: 100%;
-        width: 100%;
-        border-spacing: 10px 0;
-    }
-
+    display: table;
+    border-spacing: 10px 0;
     &-day {
         display: table-cell;
         height: 100%;
@@ -23,15 +18,13 @@
             margin: 0;
         }
         &__number {
-            font-size: 15px;
+            @include font-regular(15px);
             color: $gray-scale-5;
-            font-family: EncodeSansWide-Regular;
         }
 
         &__text {
-            font-size: 7px;
+            @include font-bold(7px);
             color: $gray-scale-3;
-            font-family: EncodeSansWide-Bold;
             margin-top: 3px;
         }
     }
