Revert "[Menu] Created header"
This reverts commit e2524e59016629baaed36a0a4fdf857e667fe8db.

--- a/client/scss/core/blocks/icon.scss
+++ b/client/scss/core/blocks/icon.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   vertical-align: middle;
 
-  .header_project-view &_inverted {
+  &_inverted {
     -webkit-filter: contrast(10);
   }
 }
