[Styles] - Fixed header title when project link is placed.

--- a/client/scss/project/blocks/header.scss
+++ b/client/scss/project/blocks/header.scss
@@ -9,7 +9,6 @@ $header-text-color: $gray-scale-4;
 
 .header {
   @include background-colors();
-
   display: table;
   z-index: 10;
   position: absolute;
@@ -45,17 +44,19 @@ $header-text-color: $gray-scale-4;
     overflow: hidden;
     text-align: center;
     vertical-align: middle;
-
     min-width: $mobile-min-width - 2 * $header-size;
+  }
 
-    &_project {
-      &:after {
-        content: "";
-        vertical-align: baseline;
-        @extend .icon;
-        text-overflow: clip;
-        @include retina-sprite($icon-create-group);
-      }
+  &__project {
+    text-decoration: none;
+    color: inherit;
+    &:after {
+      content: "";
+      margin-left: 3px;
+      vertical-align: baseline;
+      @extend .icon;
+      text-overflow: clip;
+      @include retina-sprite($icon-create-group);
     }
   }
 }
