[Layout] Change some styles use mobile first approach

--- a/client/scss/project/_vars.scss
+++ b/client/scss/project/_vars.scss
@@ -1,17 +1,26 @@
 $mobile-min-width: 320px;
+
 $header-size: 44px;
 
+$marker-width: 8px;
+$count-padding-right: 16px;
+$count-badge-width: 22px;
+$scroll-bar-width: 20px;
+$task-item__button-width: 73px;
+
+$checkbox-width: $header-size - 5px;
+$notification-width: 78px;
 
 $menu-width: $mobile-min-width - $header-size - 4px;
 $menu-text-left-padding: 23px;
 $menu-icon-right-padding : 28px;
 
-$task-item__button-width: 73px;
-
 $mobile-max-width: $menu-width + $mobile-min-width - 1px;
 
 $tablet-min-width: $mobile-max-width + 1px;
-$tablet-max-width: $tablet-min-width + 2 * $task-item__button-width - 1;
+$tablet-max-width: $tablet-min-width + 2 * $task-item__button-width - 1px;
 
 $desktop-min-width: $tablet-max-width + 1px;
 $desktop-max-width: 950px;
+
+$task-item-width: $desktop-max-width - $checkbox-width - $notification-width - 2 * $task-item__button-width;
