--- a/client/scss/project/_mixins.scss
+++ b/client/scss/project/_mixins.scss
@@ -1,19 +1,7 @@
-@mixin media-only-mobile() {
-  @media only screen and (max-width: $mobile-max-width) { @content; }
-}
-
-@mixin media-mobile-tablet() {
-  @media only screen and (max-width: $tablet-max-width) { @content; }
-}
-
-@mixin media-only-tablet() {
-  @media only screen and (min-width: $tablet-min-width) and (max-width: $tablet-max-width) { @content; }
-}
-
-@mixin media-tablet-desktop() {
+@mixin media-tablet() {
   @media only screen and (min-width: $tablet-min-width) { @content; }
 }
 
-@mixin media-only-desktop() {
+@mixin media-desktop() {
   @media only screen and (min-width: $desktop-min-width) { @content; }
 }
