--- a/client/scss/project/blocks/task-item.scss
+++ b/client/scss/project/blocks/task-item.scss
@@ -14,9 +14,6 @@
   text-transform: uppercase;
 }
 
-$checkbox-width: $header-size - 5px;
-$notification-width: 78px;
-
 @mixin task-item__button($bg-color, $icon-group , $text) {
   @extend %i-task-item__button;
   @include colorize-all($gray-scale-0, $bg-color);
@@ -43,6 +40,7 @@ $notification-width: 78px;
     @extend %i-task-item-col;
     text-align: center;
     width: $checkbox-width;
+    min-width: $checkbox-width;
   }
 
   //region info section
@@ -65,6 +63,7 @@ $notification-width: 78px;
   &__notification {
     @extend %i-task-item-col;
     width: $notification-width;
+    min-width: $notification-width;
     text-align: left;
   }
 
@@ -78,11 +77,6 @@ $notification-width: 78px;
 
     &_project, &_date, &_access-time {
       margin-top: 4px;
-    }
-
-    &_project .badge {
-      margin-left: 1px;
-      margin-right: 2px;
     }
 
     &_date {
@@ -101,28 +95,32 @@ $notification-width: 78px;
   //region overlap buttons group
 
   &__buttons {
-    @include media-mobile-tablet() {
-      display: none;
-      &_active {
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $hover-color;
-      }
+    display: none;
+    &_active {
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $hover-color;
     }
 
-    @include media-only-desktop() {
+    @include media-desktop() {
       @extend %i-task-item-col;
+      display: table-cell;
       width: $task-item__button-width *2;
+      min-width: $task-item__button-width *2;
       border-bottom: 0;
       padding-bottom: 1px;
+
+      &_active {
+        position: static;
+      }
     }
   }
 
-  @include media-only-desktop {
+  @include media-desktop() {
     &:first-child &__buttons {
       padding-top: 1px;
     }
