--- a/client/js/app.modules/main/views/project/project.view.html
+++ b/client/js/app.modules/main/views/project/project.view.html
@@ -1,5 +1,5 @@
-<dw-header color="project.color">
-    <a ui-sref="todo" class="header__project">
+<dw-header color="project.color" menu-click="page.toggleMenuVisibility()">
+    <a ui-sref="todo" class="header__project-title">
         {{project.name}}
     </a>
 </dw-header>
