--- a/client/scss/project/blocks/project-item.scss
+++ b/client/scss/project/blocks/project-item.scss
@@ -7,13 +7,12 @@
   border-collapse: collapse;
 
   &__title {
+    @extend %text-in-one-line;
+    max-width: $menu-width - $menu-text-left-padding - $count-badge-width - $count-padding-right - $scroll-bar-width - 1;
+
     display: table-cell;
     padding-left: $menu-text-left-padding - $marker-width;
     vertical-align: middle;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    max-width: $menu-width - $menu-text-left-padding - $count-badge-width - $count-padding-right - $scroll-bar-width;
-    overflow: hidden;
 
     &:first-letter {
       text-transform: uppercase;
