[Layout] Delete unused styles; Add some styles for header; Fixed Borys's remarks

--- a/client/scss/project/_vars.scss
+++ b/client/scss/project/_vars.scss
@@ -18,4 +18,4 @@ $menu-icon-right-padding : 28px;
 $tablet-min-width: $menu-width + $mobile-min-width;
 
 $desktop-min-width: $tablet-min-width + 2 * $task-item__button-width;
-$desktop-max-width: 950px;
+$desktop-page-max-width: 950px;
