--- a/client/scss/project/blocks/page.scss
+++ b/client/scss/project/blocks/page.scss
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   min-width: $mobile-min-width;
-  max-width: $desktop-max-width;
+  max-width: $desktop-page-max-width;
   margin: 0 auto;
   height: 100vh;
 
