--- a/client/scss/project/blocks/header.scss
+++ b/client/scss/project/blocks/header.scss
@@ -10,6 +10,7 @@ $header-text-color: $gray-scale-4;
 .header {
   @include background-colors();
   display: table;
+  table-layout:fixed;
   z-index: 10;
   position: absolute;
   top: 0;
@@ -39,7 +40,6 @@ $header-text-color: $gray-scale-4;
     text-transform: uppercase;
 
     @extend %text-in-one-line;
-    max-width: 200px;
 
     text-align: center;
     vertical-align: middle;
