[Layout] Fixed Borys's remarks; Change some style notations

--- a/client/scss/core/_util.scss
+++ b/client/scss/core/_util.scss
@@ -1,14 +1,22 @@
 %clearfix {
   *zoom: 1;
+
   &:before,
   &:after {
     display: table;
-    content: "";
+    content: '';
     // Fixes Opera/contenteditable bug:
     // http://nicolasgallagher.com/micro-clearfix-hack/#comment-36952
     line-height: 0;
   }
+
   &:after {
     clear: both;
   }
+}
+
+%text-in-one-line {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
